# ReplayOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: replayos.config.example.toml
demo/: README.md
docs/: api.md  architecture.md  capture_daemon.md  operations.md  plugins.md
plugins/: example_connector.py  local_json_connector.py  rss_connector.py
replayos/: __init__.py  browser_history.py  capture_daemon.py  cli.py  config.py  db.py  metrics.py  observability.py  providers.py  security.py  server.py  service_manager.py  services.py  trust.py
replayos/connectors/: __init__.py  base.py  builtin.py  registry.py
scripts/: demo_one_command.sh  install.sh  package_zip.sh  run_bg.sh  status.sh  stop.sh
scripts/service/: install.sh  status.sh  uninstall.sh
tests/: e2e_smoke.py  test_config.py  test_db.py  test_metrics.py  test_security.py  test_service.py
web/: app.js  index.html  styles.css
